--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 	</div>
 
 	<ul id="toolBar">
-		<li><button id="toolPen">Pen</button></li>
-		<li><button id="toolRuler">Ruler</button></li>
-		<li><button>Circle</button></li>
+		<li><button id="penTool">Pen</button></li>
+		<li><button id="rulerTool">Ruler</button></li>
+		<li><button id="compassTool">Compass</button></li>
 		<li><button>Erase</button></li>
 	</ul>
 	<div id="editorContainer" oncontextmenu="return false;" style="height: 100%; width: 100%;">
