--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 		<li><button id="penTool">Pen</button></li>
 		<li><button id="rulerTool">Ruler</button></li>
 		<li><button id="compassTool">Compass</button></li>
+		<li><button id="squareTool">Square</button></li>
 		<li><button>Erase</button></li>
 	</ul>
 	<div id="editorContainer" oncontextmenu="return false;" style="height: 100%; width: 100%;">
