css update, layers and frames added to html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,31 @@
 		<li><button id="squareTool">Square</button></li>
 		<li><button>Erase</button></li>
 	</ul>
-	<div id="editorContainer" oncontextmenu="return false;" style="height: 100%; width: 100%;">
+
+	<div id="frames">
+		<canvas width=10 height=10 class="frame"></canvas>
+		<canvas width=10 height=10 class="frame"></canvas>
+		<canvas width=10 height=10 class="frame"></canvas>
+		<canvas width=10 height=10 class="frame"></canvas>
+		<canvas width=10 height=10 class="frame"></canvas>
+		<canvas width=10 height=10 class="frame"></canvas>
+		<canvas width=10 height=10 class="frame"></canvas>
+		<canvas width=10 height=10 class="frame"></canvas>
+		<canvas width=10 height=10 class="frame"></canvas>
+		<canvas width=10 height=10 class="frame"></canvas>
+		<canvas width=10 height=10 class="frame"></canvas>
+		<canvas width=10 height=10 class="frame"></canvas>
+		<canvas width=10 height=10 class="frame"></canvas>
+		<canvas width=10 height=10 class="frame"></canvas>
+		<canvas width=10 height=10 class="frame"></canvas>
+		<canvas width=10 height=10 class="frame"></canvas>
+		<canvas width=10 height=10 class="frame"></canvas>
+	</div>
+
+	<ul id="layerBar">
+	</ul>
+
+	<div id="editorContainer" oncontextmenu="return false;">
 	</div>
 </body>
 
