template on the current layer, redo steps

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 		<li><button id="compassTool">Compass</button></li>
 		<li><button id="squareTool">Square</button></li>
 		<li><button>Erase</button></li>
+		<li><button id="undo">Undo</button></li>
+		<li><button id="redo">Redo</button></li>
 	</ul>
 
 	<div id="frames">
