layers opacity, add and remove layers

--- a/index.html
+++ b/index.html
@@ -61,7 +61,17 @@
 		<canvas width=10 height=10 class="frame"></canvas>
 	</div>
 
-	<ul id="layerBar"></ul>
+	<div id="layersConfig">
+		<button id="moveLayerUp">↑</button>
+		<button id="moveLayerDown">↓</button>
+		<button id="addLayer">+</button>
+		<button id="removeLayer">-</button>
+	</div>
+
+	<ul id="layerBar">
+	</ul>
+	<ul id="layerRangeBar">
+	</ul>
 
 	<div id="pickerContainer">
 		<li>Primary</li>
