layer naming prompt

--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
 
 	<div id="editorContainer" oncontextmenu="return false;">
 	</div>
+
+	<dialog id="promptDialog" class="dialog">
+		<form>
+			<p></p>
+			<input type="text" id="dialogInput"/>
+			<button value="confirm" formmethod="dialog">OK</button>
+			<button value="cancel" formmethod="dialog">Cancel</button>
+		</form>
+	</dialog>
 </body>
 
 </html>
