--- a/index.html
+++ b/index.html
@@ -68,10 +68,8 @@
 		<button id="removeLayer">-</button>
 	</div>
 
-	<ul id="layerBar">
-	</ul>
-	<ul id="layerRangeBar">
-	</ul>
+	<ul id="layerBar"></ul>
+	<ul id="layerRangeBar"></ul>
 
 	<div id="pickerContainer">
 		<li>Primary</li>
