--- a/index.html
+++ b/index.html
@@ -40,34 +40,23 @@
 		<li><button id="undo">Undo</button></li>
 		<li><button id="redo">Redo</button></li>
 	</ul>
+    
+    <ul id="framesConfig">
+        <li><button id="addFrame">+</button></li>
+        <li><button id="removeFrame">-</button></li>
+        <li><button id="duplicateFrame">d</button></li>
+    </ul>
 
 	<div id="frames">
-		<canvas class="frame"></canvas>
-		<canvas class="frame"></canvas>
-		<canvas class="frame"></canvas>
-		<canvas class="frame"></canvas>
-		<canvas class="frame"></canvas>
-		<canvas class="frame"></canvas>
-		<canvas class="frame"></canvas>
-		<canvas class="frame"></canvas>
-		<canvas class="frame"></canvas>
-		<canvas class="frame"></canvas>
-		<canvas class="frame"></canvas>
-		<canvas class="frame"></canvas>
-		<canvas class="frame"></canvas>
-		<canvas class="frame"></canvas>
-		<canvas class="frame"></canvas>
-		<canvas class="frame"></canvas>
-		<canvas class="frame"></canvas>
 	</div>
 
     <canvas id="animationFrame"></canvas>
 
 	<div id="layersConfig">
-		<button id="moveLayerUp">↑</button>
-		<button id="moveLayerDown">↓</button>
 		<button id="addLayer">+</button>
 		<button id="removeLayer">-</button>
+        <button id="moveLayerUp">↑</button>
+        <button id="moveLayerDown">↓</button>
 	</div>
 
 	<ul id="layerBar"></ul>
