--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
 	</div>
 
     <canvas id="animationFrame"></canvas>
+    <div id="fpsContainer">
+        <label>FPS:</label>
+        <label id="fpsValue">0</label>
+        <input type="range" id="fpsRange" name="FPS" min="0" max="60" value="0">
+    </div>
 
 	<div id="layersConfig">
 		<button id="addLayer">+</button>
