--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         <li><button id="addFrame">+</button></li>
         <li><button id="removeFrame">-</button></li>
         <li><button id="duplicateFrame">d</button></li>
+        <li><button id="moveFrameUp">↑</button></li>
+        <li><button id="moveFrameDown">↓</button></li>
     </ul>
 
 	<div id="frames">
