--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 		<li><button id="compassTool">Compass</button></li>
 		<li><button id="squareTool">Square</button></li>
 		<li><button id="eraseTool">Erase</button></li>
-		<li><button id="undo">Undo</button></li>
-		<li><button id="redo">Redo</button></li>
+		<li><button id="undo">↶</button></li>
+		<li><button id="redo">↷</button></li>
 	</ul>
     
     <ul id="framesConfig">
@@ -79,6 +79,9 @@
     <div id="paletteConfig">
 		<button id="addColor">+</button>
 		<button id="removeColor">-</button>
+        <button id="duplicateColor">d</button>
+        <button id="moveColorLeft">←</button>
+        <button id="moveColorRight">→</button>
     </div>
 
     <table id="paletteTable" oncontextmenu="return false;"></table>
