project save and load

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				<button id="fileSave">Save</button>
 				<button id="fileLoad">Load</button>
 				<button id="fileImport">Import</button>
+				<button id="fileExport">Export</button>
 			</div>
 		</div>
 		<div class="dropdown">
@@ -97,6 +98,14 @@
 			<button value="cancel" formmethod="dialog">Cancel</button>
 		</form>
 	</dialog>
+
+    <dialog id="confirmDialog" class="dialog">
+            <form>
+                <p></p>
+                <button value="confirm" formmethod="dialog">OK</button>
+                <button value="cancel" formmethod="dialog">Cancel</button>
+            </form>
+    </dialog>
 </body>
 
 </html>
