--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script type="module" src="/src/main.ts" defer></script>
 </head>
 
+<!-- <body class="noselect" oncontextmenu="return false;"> -->
 <body class="noselect">
 	<div id="topbar">
 		<div class="dropdown">
@@ -114,5 +115,4 @@
             </form>
     </dialog>
 </body>
-
 </html>
