--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <p></p>
                 <input type="number" id="sizeDialogWidthInput"/>
                 <input type="number" id="sizeDialogHeightInput"/>
-                <button value="confirm" formmethod="dialog">Ok</button>
+                <button value="ok" formmethod="dialog">Ok</button>
             </form>
     </dialog>
 </body>
