better project loading and saving

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 		<li><button id="redo">↷</button></li>
 	</ul>
     
-    <ul id="framesConfig">
-        <li><button id="addFrame">+</button></li>
-        <li><button id="removeFrame">-</button></li>
-        <li><button id="duplicateFrame">d</button></li>
-        <li><button id="moveFrameUp">↑</button></li>
-        <li><button id="moveFrameDown">↓</button></li>
-    </ul>
+	<div id="framesConfig">
+        <button id="addFrame">+</button>
+        <button id="removeFrame">-</button>
+        <button id="duplicateFrame">d</button>
+        <button id="moveFrameUp">↑</button>
+        <button id="moveFrameDown">↓</button>
+	</div>
 
 	<div id="frames">
 	</div>
