--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 				<button id="fileSave">Save</button>
 				<button id="fileLoad">Load</button>
 				<button id="fileImport">Import</button>
-				<button id="fileExport">Export</button>
+				<button id="fileExportLayer">Export Layer</button>
+				<button id="fileExportFrame">Export Frame</button>
+				<button id="fileExportFrames">Export Frames</button>
 			</div>
 		</div>
 		<div class="dropdown">
