importing layer, frame

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 				<button id="fileSaveAs">Save as</button>
 				<button id="fileSave">Save</button>
 				<button id="fileLoad">Load</button>
-				<button id="fileImport">Import</button>
+				<button id="fileImportLayer">Import Layer</button>
+				<button id="fileImportFrame">Import Frame</button>
 				<button id="fileExportLayer">Export Layer</button>
 				<button id="fileExportFrame">Export Frame</button>
 				<button id="fileExportFrames">Export Frames</button>
