--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 
 <!-- <body class="noselect" oncontextmenu="return false;"> -->
 <body class="noselect">
-	<div id="topbar">
 		<div class="dropdown">
-			<p>File</p>
 			<div class="dropdownContent">
 				<button id="fileNew">New</button>
 				<button id="fileSaveAs">Save as</button>
@@ -25,19 +23,9 @@
 				<button id="fileExportFrames">Export Frames</button>
 			</div>
 		</div>
-		<div class="dropdown">
-			<p>Settings</p>
-			<div class="dropdownContent">
-				<button>Idk</button>
-				<button>Idk</button>
-				<button>Idk</button>
-				<button>Idk</button>
-			</div>
-		</div>
-	</div>
 
 	<ul id="toolBar">
-		<li><button id="penTool">Pen</button></li>
+		<li><button id="penTool"></button></li>
 		<li><button id="rulerTool">Ruler</button></li>
 		<li><button id="compassTool">Compass</button></li>
 		<li><button id="squareTool">Square</button></li>
