--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
 	<ul id="toolBar">
 		<li><button id="penTool"></button></li>
-		<li><button id="rulerTool">Ruler</button></li>
-		<li><button id="compassTool">Compass</button></li>
+		<li><button id="rulerTool"></button></li>
+		<li><button id="compassTool"></button></li>
 		<li><button id="squareTool">Square</button></li>
 		<li><button id="eraseTool">Erase</button></li>
 		<li><button id="undo">↶</button></li>
