better file dialogs

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		<div class="dropdown">
 			<div class="dropdownContent">
 				<button id="fileNew">New</button>
+                <button id="fileLoad">Open</button>
+                <button id="fileSave">Save</button>
 				<button id="fileSaveAs">Save as</button>
-				<button id="fileSave">Save</button>
-				<button id="fileLoad">Load</button>
 				<button id="fileImportLayer">Import Layer</button>
 				<button id="fileImportFrame">Import Frame</button>
 				<button id="fileExportLayer">Export Layer</button>
