--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 			</div>
 		</div>
 
+        <button id="center">Center</button>
+
 	<ul id="toolBar">
 		<li><button id="penTool"></button></li>
 		<li><button id="rulerTool"></button></li>
