--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			</div>
 		</div>
 
-        <button id="center">Center</button>
+        <div id="center"></div>
 
 	<ul id="toolBar">
 		<li><button id="penTool"></button></li>
