animation canvas cache

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="center"></div>
 
 	<ul id="toolBar">
-		<li><button id="penTool"></button></li>
+		<li><button id="penTool" class="selectedTool"></button></li>
 		<li><button id="rulerTool"></button></li>
 		<li><button id="compassTool"></button></li>
 		<li><button id="squareTool">Square</button></li>
