--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 				<button id="fileExportLayer">Export Layer</button>
 				<button id="fileExportFrame">Export Frame</button>
 				<button id="fileExportFrames">Export Frames</button>
+				<button id="fileExportFramesGif">Export Frames as Gif</button>
 			</div>
 		</div>
 
