palette bug fix

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="dropdown">
 			<div class="dropdownContent">
 				<button id="fileNew">New</button>
-                <button id="fileLoad">Open</button>
+                <button id="fileOpen">Open</button>
                 <button id="fileSave">Save</button>
 				<button id="fileSaveAs">Save as</button>
 				<button id="fileImportLayer">Import Layer</button>
