--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <!-- <body class="noselect" oncontextmenu="return false;"> -->
 <body class="noselect">
-		<div class="dropdown">
-			<div class="dropdownContent">
+		<div id="files">
+			<div id="filesContent">
 				<button id="fileNew">New</button>
                 <button id="fileOpen">Open</button>
                 <button id="fileSave">Save</button>
