--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
 
             <tr>
                 <th>
+                    <button id="eraserTool"></button>
+                </th>
+                <th>
+                    <button id="bucketTool"></button>
+                </th>
+            </tr>
+
+            <tr>
+                <th>
                     <button id="undo">↶</button>
                 </th>
                 <th>
