--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
 
             <tr>
                 <th>
+                    <button id="pickerTool">P</button>
+                </th>
+                <th>
+                    <button id="selectTool">S</button>
+                </th>
+            </tr>
+
+            <tr>
+                <th>
                     <button id="undo">↶</button>
                 </th>
                 <th>
