--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <button id="eraserTool"></button>
                 </th>
                 <th>
-                    <button id="bucketTool"></button>
+                    <button id="rectangleEraserTool">SE</button>
                 </th>
             </tr>
 
@@ -70,6 +70,12 @@
                 </th>
                 <th>
                     <button id="selectTool">S</button>
+                </th>
+            </tr>
+
+            <tr>
+                <th>
+                    <button id="bucketTool"></button>
                 </th>
             </tr>
 
