--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
                 <th>
                     <button id="bucketTool"></button>
                 </th>
+                <th>
+                    <button id="shadeTool">Sh</button>
+                </th>
             </tr>
 
             <tr>
