--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <button id="eraserTool"></button>
                 </th>
                 <th>
-                    <button id="rectangleEraserTool">SE</button>
+                    <button id="rectangleEraserTool"></button>
                 </th>
             </tr>
 
@@ -80,26 +80,26 @@
                     <button id="bucketTool"></button>
                 </th>
                 <th>
-                    <button id="shadeTool">Sh</button>
+                    <button id="shadeTool"></button>
                 </th>
             </tr>
 
             <tr>
                 <th>
-                    <button id="undo">↶</button>
+                    <button id="undo"></button>
                 </th>
                 <th>
-                    <button id="redo">↷</button>
+                    <button id="redo"></button>
                 </th>
             </tr>
         </table>
 
         <div id="framesConfig">
-            <button id="addFrame">+</button>
-            <button id="removeFrame">-</button>
-            <button id="duplicateFrame">d</button>
-            <button id="moveFrameUp">↑</button>
-            <button id="moveFrameDown">↓</button>
+            <button id="addFrame"></button>
+            <button id="removeFrame"></button>
+            <button id="duplicateFrame"></button>
+            <button id="moveFrameUp"></button>
+            <button id="moveFrameDown"></button>
         </div>
 
         <div id="frames"></div>
@@ -119,10 +119,10 @@
         </div>
 
         <div id="layersConfig">
-            <button id="addLayer">+</button>
-            <button id="removeLayer">-</button>
-            <button id="moveLayerUp">↑</button>
-            <button id="moveLayerDown">↓</button>
+            <button id="addLayer"></button>
+            <button id="removeLayer"></button>
+            <button id="moveLayerUp"></button>
+            <button id="moveLayerDown"></button>
         </div>
 
         <ul id="layerBar"></ul>
@@ -136,11 +136,11 @@
         </div>
 
         <div id="paletteConfig">
-            <button id="addColor">+</button>
-            <button id="removeColor">-</button>
-            <button id="duplicateColor">d</button>
-            <button id="moveColorLeft">←</button>
-            <button id="moveColorRight">→</button>
+            <button id="addColor"></button>
+            <button id="removeColor"></button>
+            <button id="duplicateColor"></button>
+            <button id="moveColorLeft"></button>
+            <button id="moveColorRight"></button>
         </div>
 
         <table id="paletteTable" oncontextmenu="return false;"></table>
