--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 
             <tr>
                 <th>
-                    <button id="pickerTool">P</button>
+                    <button id="pickerTool"></button>
                 </th>
                 <th>
-                    <button id="selectTool">S</button>
+                    <button id="selectTool"></button>
                 </th>
             </tr>
 
