--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         </div>
 
         <div id="center"></div>
+        <div id="verticalFlip">vf</div>
+        <div id="horizontalFlip">hf</div>
+        <div id="leftRotation"></div>
+        <div id="rightRotation"></div>
 
         <table id="toolBar">
             <tr>
