moved undo and redo to topbar

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <div id="horizontalFlip">hf</div>
         <div id="leftRotation"></div>
         <div id="rightRotation"></div>
+        <div id="undo"></div>
+        <div id="redo"></div>
 
         <table id="toolBar">
             <tr>
@@ -85,15 +87,6 @@
                 </th>
                 <th>
                     <button id="shadeTool"></button>
-                </th>
-            </tr>
-
-            <tr>
-                <th>
-                    <button id="undo"></button>
-                </th>
-                <th>
-                    <button id="redo"></button>
                 </th>
             </tr>
         </table>
