mirror icons, new shortcuts

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </div>
 
         <div id="center"></div>
-        <div id="verticalFlip">vf</div>
-        <div id="horizontalFlip">hf</div>
+        <div id="verticalFlip"></div>
+        <div id="horizontalFlip"></div>
         <div id="leftRotation"></div>
         <div id="rightRotation"></div>
         <div id="undo"></div>
