--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div id="rightRotation"></div>
         <div id="undo"></div>
         <div id="redo"></div>
+        <div id="info"></div>
 
         <table id="toolBar">
             <tr>
